--- a/priv/gettext/en/LC_MESSAGES/errors.po
+++ b/priv/gettext/en/LC_MESSAGES/errors.po
@@ -65,8 +65,8 @@ msgstr[1] ""
 
 msgid "should be at least %{count} character(s)"
 msgid_plural "should be at least %{count} character(s)"
-msgstr[0] "\"%{field}\" length should be at least %{count} character long"
-msgstr[1] "\"%{field}\" length should be at least %{count} characters long"
+msgstr[0] "\"%{field}\" length must be at least %{count} character long"
+msgstr[1] "\"%{field}\" length must be at least %{count} characters long"
 
 msgid "should have at least %{count} item(s)"
 msgid_plural "should have at least %{count} item(s)"
